Fix for bug 91095 -- Default Plugin bypassed if 'code' attribute is missing in 'applet' tag, r=peterl, sr=attinasi